# starfish

./: .dockerignore  .editorconfig  .gitignore  .licensesnip  .licensesnipignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  _typos.toml  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: code.yml  docker.yml  lint.yml  releases.yml  updates.yml
benchmark-results/: 2026-07-13-starfish-authentication-geo-40-validators-60s.md  2026-07-13-starfish-authentication-geo-60s.md  2026-07-13-starfish-authentication-local.md  2026-07-13-validator-scaling-probe.md  2026-07-14-authentication-geo-60-validators-60s.md
crates/mysticeti-core/: Cargo.toml
crates/mysticeti-core/src/: block_handler.rs  block_manager.rs  block_store.rs  committee.rs  config.rs  core.rs  crypto.rs  data.rs  decoder.rs  encoder.rs  epoch_close.rs  finalization_interpreter.rs  lib.rs  metrics.rs  net_sync.rs  network.rs  range_map.rs  rocks_store.rs  simulator.rs  state.rs  syncer.rs  synchronizer.rs  test_util.rs  threshold_clock.rs  transactions_generator.rs  types.rs  validator.rs  wal.rs
crates/mysticeti-core/src/consensus/: base_committer.rs  linearizer.rs  mod.rs  universal_committer.rs
crates/mysticeti-core/src/consensus/tests/: base_committer_tests.rs  multi_committer_tests.rs  pipelined_committer_tests.rs
crates/mysticeti-core/src/core_thread/: simulated.rs  spawned.rs
crates/mysticeti/src/: main.rs
crates/orchestrator/: Cargo.toml  README.md  readme.md
crates/orchestrator/assets/: grafana-dashboard.json  install_node_exporter.sh  settings-template.yml
crates/orchestrator/src/: benchmark.rs  display.rs  error.rs  faults.rs  logs.rs  main.rs  measurements.rs  monitor.rs  orchestrator.rs  settings.rs  ssh.rs  testbed.rs
crates/orchestrator/src/client/: aws.rs  mod.rs  vultr.rs
crates/orchestrator/src/protocol/: mod.rs  mysticeti.rs  starfish.rs
crates/starfish/: Cargo.toml
crates/starfish-core/: Cargo.toml
crates/starfish-core/src/: block_handler.rs  block_manager.rs  block_store.rs  bls_batch_verifier.rs  bls_certificate_aggregator.rs  bls_service.rs  broadcaster.rs  cert_aggregator.rs  committee.rs  config.rs  cordial_knowledge.rs  core.rs  crypto.rs  dag_state.rs  data.rs  decoder.rs  encoder.rs  epoch_close.rs  future_simulator.rs  lib.rs  lock.rs  metrics.rs  net_sync.rs  network.rs  prometheus.rs  range_map.rs  rocks_store.rs  sailfish_service.rs  serde.rs  shard_reconstructor.rs  simulated_network.rs  simulator.rs  simulator_tracing.rs  stat.rs  state.rs  store.rs  syncer.rs  synchronizer.rs  test_util.rs  threshold_clock.rs  (+4 more)
crates/starfish-core/src/consensus/: base_committer.rs  linearizer.rs  mod.rs  universal_committer.rs
crates/starfish-core/src/consensus/tests/: base_committer_tests.rs  mod.rs  multi_committer_tests.rs  pipelined_committer_tests.rs
crates/starfish-core/src/core_thread/: mod.rs  simulated.rs  spawned.rs
crates/starfish-core/src/runtime/: mod.rs  simulated.rs  tokio.rs
crates/starfish/src/: main.rs
local-dryrun/: README.md  dryrun.sh
monitoring/: docker-compose.yaml  prometheus.yaml
monitoring/grafana/: datasource.yaml  grafana-dashboard.json
scripts/: benchmark.py  check-license-headers.sh  check.sh  cleanup.sh  dryrun.sh  dryrun_crash_and_boot.sh  dryrun_with_recovery.sh  plot_adversarial_tps_latency_cpu_bw.py  plot_committee_scaling.py  plot_outage.py  plot_stability.py  plot_stability_tidehunter.py  plot_tps_latency_cpu_bw.py  plot_tps_vs_latency.py  plot_tps_vs_latency_tidehunter.py  run_benchmarks.sh  sweep_report.py
