[workspace]
members = [
  "crates/orchestrator",
  "crates/starfish",
  "crates/starfish-core",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.3.3", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tempfile = "3.6.0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
proc-macro2 = "=1.0.100"
bindgen = "=0.71"

[profile.release]
panic = "abort"
debug = 1
