[package]
name = "orchestrator"
version = "0.0.1"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
aws-config = "1.5.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
aws-runtime = "1.2.3"
aws-sdk-ec2 = "1.51.1"
clap = { workspace = true }
color-eyre = { workspace = true }
crossterm = "0.27.0"
eyre = { workspace = true }
flate2 = "1.1.9"
futures = { workspace = true }
itertools = "0.10.5"
prettytable-rs = "0.10"
prometheus-parse = "0.2"
rand = "0.8.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.88"
serde_with = "3.8.1"
serde_yaml = "0.9.33"
ssh2 = "0.9.4" # TODO: remove this dependency
starfish-core = { path = "../starfish-core" }
thiserror = "1.0.38"
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "orchestrator"
path = "src/main.rs"
