[package]
name = "starfish-core"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
license = "Apache-2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
axum = "0.6.18"
bincode = "1.3.3"

blake3 = "1.5.5"
bytes = "1.4.0"
ed25519-consensus = "2.1.0"
eyre = { workspace = true }
futures = { workspace = true }
gettid = "0.1.2"
hex = "0.4.3"
hyper = "0.14.26"
libc = "0.2.146"
memmap2 = "0.7.0"

parking_lot = "0.12.1"
prettytable-rs = "0.10"
prometheus = "0.13.3"
rand = { version = "0.8.5", features = ["small_rng"] }
reed-solomon-simd = { version = "3.0.1" }
rocksdb = { version = "0.22.0", features = ["snappy", "lz4", "zlib", "multi-threaded-cf"] }
rs_merkle = "1.4.2"
serde = { workspace = true }
serde_yaml = "0.9.21"
tabled = "0.12.2"
tempfile = { workspace = true } # todo - move to dev-dep
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = "1.6.0"
zstd = { version = "0.13.3", default-features = false }

[dev-dependencies]
reqwest = { workspace = true }
seahash = "4.1.0"
tempdir = "0.3.7"

[build-dependencies]
bindgen = { workspace = true }
