[package]
name = "starfish-core"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
license = "Apache-2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
axum = "0.7"
bincode = "1.3.3"
blake3 = "1.5.5"
blst = "0.3"
bytes = "1.4.0"
ed25519-consensus = "2.1.0"
eyre = { workspace = true }
fdlimit = "0.3.0"
futures = { workspace = true }
gettid = "0.1.2"
hex = "0.4.3"
libc = "0.2.146"
lz4_flex = "0.11"
memmap2 = "0.7.0"

parking_lot = "0.12.1"
prettytable-rs = "0.10"
prometheus = "0.13.3"
rand = { version = "0.8.5", features = ["small_rng"] }
reed-solomon-simd = { version = "3.0.1" }
reqwest = { workspace = true }
rocksdb = { version = "0.22.0", features = ["snappy", "lz4", "zlib", "zstd", "multi-threaded-cf"] }
rs_merkle = "1.4.2"
serde = { workspace = true }
serde_yaml = "0.9.21"
tabled = "0.12.2"
tempfile = { workspace = true } # todo - move to dev-dep
tidehunter = { git = "https://github.com/MystenLabs/tidehunter", rev = "cfe208a", optional = true }
tokio = { workspace = true }
tower-http = { version = "0.6.8", features = ["compression-gzip"] }
tracing = { workspace = true }
zeroize = "1.6.0"
zstd = { version = "0.13.3", default-features = false }

[features]
tidehunter = ["dep:tidehunter"]

[target.'cfg(target_os = "linux")'.dependencies]
prometheus = { version = "0.13.3", features = ["process"] }

[dev-dependencies]
seahash = "4.1.0"
test-case = "3"

[build-dependencies]
bindgen = { workspace = true }
