[package]
name = "mysticeti"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
mysticeti-core = { path = "../starfish-core" }
tokio = { workspace = true }
prettytable-rs = "0.10"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
