[package]
name = "starfish"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
license = "Apache-2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
prettytable-rs = "0.10"
starfish-core = { path = "../starfish-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
